[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/themes/LineEdit.tres" type="Theme" id=1]
[ext_resource path="res://assets/gui/toggle_button.png" type="Texture" id=2]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/TextEdit.gd" type="Script" id=3]
[ext_resource path="res://src/create/Press/mainWindowScripts/pressingIngredientItems.gd" type="Script" id=4]
[ext_resource path="res://src/create/shared/warningPopUp.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/MinecraftRegular-Bmg3.otf" type="DynamicFontData" id=6]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/TagEdit.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=18]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( -1, 0, 33, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 33, 16 )

[sub_resource type="DynamicFont" id=19]
size = 20
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 6 )

[node name="pressing" type="Control"]
margin_top = 62.0
margin_right = 992.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 78 )
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredients" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ingredients"]
margin_right = 992.0
margin_bottom = 26.0
rect_min_size = Vector2( 196, 26 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 18 )
text = " Ingredient item:"
valign = 1

[node name="tagModeChanger" type="HBoxContainer" parent="Ingredients"]
margin_top = 26.0
margin_right = 992.0
margin_bottom = 52.0
custom_constants/separation = 0

[node name="Control" type="Control" parent="Ingredients/tagModeChanger"]
margin_right = 196.0
margin_bottom = 26.0
rect_min_size = Vector2( 196, 26 )

[node name="itemLabel" type="Label" parent="Ingredients/tagModeChanger"]
margin_left = 196.0
margin_right = 232.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
custom_fonts/font = SubResource( 20 )
text = "item"
valign = 1

[node name="modeSwithcer" type="CheckButton" parent="Ingredients/tagModeChanger"]
margin_left = 232.0
margin_right = 277.0
margin_bottom = 26.0
focus_mode = 0
custom_icons/off = SubResource( 21 )
custom_icons/on = SubResource( 22 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tagLabel" type="Label" parent="Ingredients/tagModeChanger"]
margin_left = 277.0
margin_right = 309.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
custom_fonts/font = SubResource( 20 )
text = "tag"
valign = 1

[node name="idLine" type="HBoxContainer" parent="Ingredients"]
margin_top = 52.0
margin_right = 992.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Control" type="Control" parent="Ingredients/idLine"]
margin_right = 196.0
margin_bottom = 26.0
rect_min_size = Vector2( 196, 26 )

[node name="identifierLabel" type="Label" parent="Ingredients/idLine"]
margin_left = 196.0
margin_right = 452.0
margin_bottom = 26.0
rect_min_size = Vector2( 256, 26 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 18 )
text = "[MODID]:[IDENTIFIER]"
valign = 1

[node name="identifierKey" type="LineEdit" parent="Ingredients/idLine"]
margin_left = 452.0
margin_right = 720.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 19 )
caret_blink = true
script = ExtResource( 3 )
warnPopUp = ExtResource( 5 )

[node name="colon" type="Label" parent="Ingredients/idLine"]
margin_left = 720.0
margin_right = 724.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 18 )
text = ":"
valign = 1

[node name="identifierValue" type="LineEdit" parent="Ingredients/idLine"]
margin_left = 724.0
margin_right = 992.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 19 )
caret_blink = true
script = ExtResource( 7 )

[connection signal="toggled" from="Ingredients/tagModeChanger/modeSwithcer" to="." method="change_tag_mode"]
[connection signal="text_changed" from="Ingredients/idLine/identifierKey" to="Ingredients/idLine/identifierKey" method="textChanged"]
[connection signal="text_changed" from="Ingredients/idLine/identifierValue" to="Ingredients/idLine/identifierValue" method="textChanged"]
